# ai-examples

./: .gitignore  README.md  hypercorn-config.toml  pyproject.toml  requirements.txt
a2a/: Dockerfile  INTEGRATION_SUMMARY.md  README.md  compose.yml  integration_demo.py  pyproject.toml
a2a/a2a/google_adk/: __main__.py  agent.py
a2a/a2a/host_agent/: __main__.py  agent.py  utils.py
a2a/a2a/langgraph/: __main__.py  agent.py
a2a/a2a/reimbursement/: __main__.py  agent.py
a2a/a2a/restatedev/: __main__.py  agent.py
a2a/a2a/weather/: __main__.py  agent.py
a2a/a2a_samples/adk_expense_reimbursement/: __main__.py  agent_executor.py
a2a/a2a_samples/adk_weather/: agent.py
a2a/a2a_samples/host_agent/: __main__.py  agent.py  utils.py
a2a/a2a_samples/hybrid_reimbursement/: __init__.py  __main__.py  adk_restate_agent.py  agent.py
a2a/a2a_samples/reimbursement/: README.md  __main__.py  adk_restate_agent.py  agent.py
a2a/a2a_samples/weather/: __main__.py  agent.py  utils.py
a2a/agents/google_adk/: __main__.py  agent.py
a2a/agents/host_agent/: __main__.py  agent.py
a2a/agents/langgraph/: __main__.py  agent.py
a2a/agents/restatedev/: __main__.py  agent.py
a2a/app/reimbursement/: __main__.py  agent.py  prompt.py  utils.py
a2a/app/weather/: __main__.py  agent.py  utils.py
a2a/common/server/: a2a_agent.py  a2a_server.py  agent_session.py  middleware.py
advanced/insurance-claims/: README.md  pyproject.toml
advanced/insurance-claims/app/: workflow.py
advanced/interruptible-agent/: README.md  pyproject.toml
advanced/interruptible-agent/app/: __main__.py  agent.py  chat.py
advanced/restate-native-agent/: README.md  __main__.py  agent.py  pyproject.toml
advanced/restate-native-agent/client/: __main__.py
advanced/restate-native-agent/restate_agent/: agent_session.py
advanced/restate-native-agent/utils/: account.py  models.py  utils.py
agents/: README.md  pyproject.toml
agents/client/: __main__.py
agents/native_restate/: __main__.py  account.py  agent.py  chat.py
agents/native_restate/utils/: agent_session.py  utils.py
agents/openai-agents-python/: README.md  agent.py
agents/openai-agents-python/client/: __main__.py
agents/openai-agents-python/utils/: middleware.py  utils.py
agents/openai_sdk/: __main__.py  agent.py  middleware.py  minimal_agent.py
common/: a2a_agent.py  a2a_middleware.py  agent_session.py  pyproject.toml
common/restate_agents/: a2a_agent.py  a2a_middleware.py  agent_session.py
diy-patterns/: README.md  __main__.py  pyproject.toml
diy-patterns/chaining/: service.py
diy-patterns/human_evaluator_optimizer/: service.py
diy-patterns/human_in_the_loop/: service.py
diy-patterns/util/: util.py
e_a2a/: README.md  pyproject.toml
e_a2a/agents/google_adk/: __main__.py  agent.py
e_a2a/agents/host_agent/: __main__.py
e_a2a/agents/langgraph/: __main__.py  agent.py
e_a2a/agents/restate/: __main__.py
e_a2a/common/: types.py
e_a2a/common/server/: a2a_server.py
end-to-end-applications/credit-workflows/: README.md  pyproject.toml
end-to-end-applications/credit-workflows/app/: __main__.py  account.py  chat.py  credit_review_agent.py  credit_review_workflow.py
end-to-end-applications/credit-workflows/client/: __main__.py
end-to-end-applications/insurance-claims/: README.md  pyproject.toml
end-to-end-applications/insurance-claims/app/: __main__.py  workflow.py
end-to-end-applications/interruptible-agent/: README.md  pyproject.toml
end-to-end-applications/interruptible-agent/app/: __main__.py  agent.py  chat.py
google-adk/examples/langfuse/: README.md  __main__.py  agent.py  pyproject.toml
google-adk/tour-of-agents/: .gitignore  README.md  __main__.py  pyproject.toml
google-adk/tour-of-agents/app/: chat_agent.py  durable_agent.py  error_handling.py  human_approval_agent.py  human_approval_agent_with_timeout.py  multi_agent.py  parallel_agents.py  parallel_tools.py  parallel_tools_agent.py  remote_agents.py  sub_workflow_agent.py  workflow_evaluator_optimizer.py  workflow_orchestrator.py  workflow_parallel.py  workflow_sequential.py
integrations/langfuse/: .env.template  .gitignore  README.md  __main__.py  agent.py  pyproject.toml
integrations/langfuse/utils/: context_utils.py  middleware.py
langchain-python/template/: README.md  __main__.py  agent.py  pyproject.toml
langchain-python/template/.claude/: settings.json
langchain-python/tour-of-agents/: README.md  pyproject.toml  test_examples.sh
langchain-python/tour-of-agents/.test-logs/: chat_agent.response  error_handling.response  multi_agent.response  parallel_tools_agent.response  remote_agents.response  workflow_evaluator_optimizer.response  workflow_orchestrator.response  workflow_parallel.response  workflow_sequential.response
langchain-python/tour-of-agents/app/: chat_agent.py  error_handling.py  human_approval_agent.py  human_approval_agent_with_timeout.py  multi_agent.py  parallel_tools_agent.py  remote_agents.py  sub_workflow_agent.py  workflow_evaluator_optimizer.py  workflow_orchestrator.py  workflow_parallel.py  workflow_sequential.py
mcp/: .gitignore  (+1 more)
openai-agents/examples/: .gitignore  README.md  __main__.py  agent.py  client.py  pyproject.toml
openai-agents/examples/app/: mcp.py  mcp_with_approval.py  notify_when_ready.py  rollback_agent.py  websearch.py
openai-agents/examples/arize_phoenix/: README.md  __main__.py  agent.py  pyproject.toml
openai-agents/examples/langfuse/: README.md  __main__.py  agent.py  evaluation.py  pyproject.toml  tracing.py
openai-agents/template/: README.md  agent.py  pyproject.toml
openai-agents/tour-of-agents/: README.md  __main__.py  pyproject.toml
pydantic-ai/template/: README.md  agent.py  pyproject.toml
pydantic-ai/tour-of-agents/: README.md  pyproject.toml
python-patterns/: README.md  __main__.py  pyproject.toml
python-patterns/app/: agent_with_tool.py  chaining.py  chat.py  evaluator_optimizer.py  human_in_the_loop.py  orchestrator_workers.py  parallel_agents.py  parallel_tools.py  racing_agents.py  routing_to_agent.py  routing_to_remote_agent.py  routing_to_tool.py
(+551 files in other folders)
