[project]
name = "restate-ai-agents"
version = "0.1.0"
description = "Python examples using Restate for agents"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk==0.6.0",
    "pydantic",
    "black",
    "httpx",
    "openai",
    "openai-agents"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
orchestrate_app = "a_orchestrating_llm_calls.main:main"
resilient_agents = "b_resilient_agents.main:main"
agentic_workflows = "c_agentic_workflows.main:main"
mixing_agents_and_workflows = "d_mixing_agents_and_workflows.main:main"
chaining_client = "a_orchestrating_llm_calls.a_chaining.client:main"
parallelization_client = "a_orchestrating_llm_calls.b_parallelization.client:main"
routing_client = "a_orchestrating_llm_calls.c_routing.client:main"
orchestrator_client = "a_orchestrating_llm_calls.d_orchestrator_workers.client:main"
evaluator_client = "a_orchestrating_llm_calls.e_evaluator_optimizer.client:main"


[tool.hatch.build.targets.wheel]
packages = ["a_orchestrating_llm_calls", "b_resilient_agents", "c_agentic_workflows", "d_mixing_agents_and_workflows"]