[project]
name = "restate-ai-examples"
version = "0.1.0"
description = "Python examples using Restate for agents"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.28.1",
    "hypercorn",
    "restate_sdk[serde]>=0.7.3",
    "pydantic>=2.10.6",
    "openai",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.uv.workspace]
members = [
    "a2a",
    "agents",
    "diy-patterns",
    "end-to-end-applications/insurance-claims",
    "end-to-end-applications/interruptible-agent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
