[project]
name = "a2a"
version = "0.1.0"
description = "A2A submodule for Restate and GenAI integrations"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.28.1",
    "hypercorn",
    "restate_sdk[serde]>=0.10.2",
    "pydantic>=2.11.9",
    "openai",
    "fastapi[standard]",
    "python-dotenv>=1.1.0",
    "openai-agents==0.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["a2a"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"