[project]
name = "restate-ai-agents"
version = "0.1.0"
description = "Python examples using Restate for agents"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk>=0.7.1",
    "pydantic",
    "black",
    "httpx",
    "openai",
    "openai-agents"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["native_restate", "openai_sdk"]