[project]
name = "restate-ai-agents"
version = "0.1.0"
description = "Python examples using Restate for agents"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk[serde]>=0.7.1",
    "pydantic",
    "httpx",
    "openai",
    "openai-agents",
    "common",
]

[tool.uv.sources]
common = { path = "../common" }

[project.optional-dependencies]
dev = [
    "black>=25.1.0"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["native_restate", "openai_sdk"]