[project]
name = "agents"
version = "0.1.0"
description = "Python examples using Restate for agents"
requires-python = ">=3.12"

dependencies = [
    "restate-ai-examples",
    "openai-agents",
]

[tool.hatch.build.targets.wheel]
packages = ["native_restate", "openai_sdk", "client"]

[tool.uv.sources]
restate-ai-examples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"