[project]
name = "common"
version = "0.1.0"
description = "Common A2A and agent functionality for Restate agents"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk[serde]>=0.7.1",
    "pydantic",
    "httpx",
    "openai",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["restate_agents"]