[project]
name = "diy-patterns"
version = "0.1.0"
description = "Python DIY patterns using Restate for agents"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.28.1",
    "hypercorn",
    "restate_sdk[serde]>=0.7.3",
    "pydantic>=2.10.6",
    "openai",
    "openai-agents",
    "anthropic",
]

[project.scripts]
chaining_client = "chaining.client:main"
parallelization_client = "parallelization.client:main"
routing_client = "routing.client:main"
orchestrator_client = "orchestrator_workers.client:main"
evaluator_client = "evaluator_optimizer.client:main"

[tool.hatch.build.targets.wheel]
packages = ["chaining", "evaluator_optimizer", "human_evaluator_optimizer", "orchestrator_workers", "parallelization", "routing", "util"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"