[project]
name = "patterns"
version = "0.1.0"
description = "Python DIY patterns using Restate for agents"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk[serde]>=0.10.1",
    "pydantic>=2.11.9",
    "litellm"
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
