[project]
name = "patterns"
version = "0.1.0"
description = "Python DIY patterns using Restate for agents"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "hypercorn",
    "restate-sdk[serde]>=0.11.0",
    "pydantic>=2.11.9",
    "litellm",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.uv.sources]
restate-sdk = { path = "../../sdk-python/dist/restate_sdk-0.11.0-cp312-cp312-linux_x86_64.whl" }
