[project]
name = "insurance-claims"
version = "0.1.0"
description = "Restate insurance claims example"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk[serde]>=0.10.2",
    "pydantic>=2.11.9",
    "openai",
    "pypdf"
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
