[project]
name = "restate-interruptible-agent"
version = "0.1.0"
description = "Python example of an interruptible agent using Restate"
readme = "README.md"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["app"]

dependencies = [
    "hypercorn",
    "restate_sdk[serde]>=0.7.3",
    "pydantic>=2.10.6",
    "pypdf"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
