[project]
name = "restate-interruptible-agent"
version = "0.1.0"
description = "Python example of an interruptible agent using Restate"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk[serde]>=0.10.1",
    "pydantic>=2.11.9",
    "openai"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
