[project]
name = "agents"
version = "0.1.0"
description = "Python examples using Restate for agents"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "restate_sdk[serde]>=0.10.1",
    "pydantic>=2.11.9",
    "openai-agents==0.3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
