[project]
name = "credit-workflows"
version = "0.1.0"
description = "Restate credit workflow example"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "restate-ai-examples",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "client"]

[tool.uv.sources]
restate-ai-examples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"