[project]
name = "insurance-claims"
version = "0.1.0"
description = "Restate insurance claims example"
requires-python = ">=3.12"

dependencies = [
    "restate-ai-examples",
    "pypdf"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
restate-ai-examples = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"