[project]
name = "tour-of-agents"
version = "0.1.0"
description = "Tour of Google ADK agents using Restate for durability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypercorn>=0.17.3",
    "pydantic>=2.10.6",
    "google-adk>=1.18.0",
    "restate-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
restate-sdk = { path = "../../../sdk-python/dist/restate_sdk-0.17.1-cp313-cp313-macosx_11_0_arm64.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
