[project]
name = "hello-world"
version = "0.1.0"
description = "Example hello world project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hypercorn",
    "langfuse>=3.10.3",
    "openai-agents>=0.6.1",
    "restate_sdk[serde]>=0.12.0",
    "python-dotenv>=1.1.0",
    "openinference-instrumentation-openai-agents>=1.3.1",
    "nest-asyncio>=1.6.0",
    "openinference-instrumentation-openai>=0.1.40",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
