[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with LangChain"
requires-python = ">=3.13"

dependencies = [
    "httpx",
    "hypercorn",
    "pydantic>=2.11.9",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "restate-sdk",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.uv.sources]
restate-sdk = { path = "../../../sdk-python/dist/restate_sdk-0.17.1-cp314-cp314-macosx_11_0_arm64.whl" }
