[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with LangChain"
requires-python = ">=3.13"

dependencies = [
    "httpx",
    "hypercorn",
    "pydantic>=2.11.9",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "restate-sdk[serde]>=0.18.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
