[project]
name = "tour-of-agents"
version = "0.1.0"
description = "Tour of LangChain agents using Restate for durability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "hypercorn",
    "pydantic>=2.11.9",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "restate-sdk[serde]>=0.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
