[project]
name = "hello-world"
version = "0.1.0"
description = "Example hello world project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hypercorn>=0.17.3",
    "pydantic>=2.10.6",
    "restate-sdk[serde]>=0.13.1",
    "openai-agents>=0.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
restate-sdk = { path = "../../../sdk-python/dist/restate_sdk-0.13.1-cp313-cp313-linux_x86_64.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
