[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with OpenAI Agent SDK"
requires-python = ">=3.12"

dependencies = [
    "httpx",
    "hypercorn",
    "restate-sdk[serde]>=0.11.0",
    "pydantic>=2.11.9",
    "openai-agents==0.3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
