[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with OpenAI Agent SDK"
requires-python = ">=3.12"

dependencies = [
    "httpx",
    "hypercorn",
    "restate-sdk[serde]>=0.13.1",
    "pydantic>=2.11.9",
    "openai-agents==0.3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.uv.sources]
restate-sdk = { path = "../../../sdk-python/dist/restate_sdk-0.13.1-cp313-cp313-linux_x86_64.whl" }
