[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with Pydantic AI"
requires-python = ">=3.12"

dependencies = [
    "httpx",
    "hypercorn",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.68.0",
    "restate-sdk",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.uv.sources]
restate-sdk = { path = "../../../sdk-python/dist/restate_sdk-0.15.0-cp314-cp314-macosx_11_0_arm64.whl" }
