[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with Pydantic AI"
requires-python = ">=3.12"

dependencies = [
    "httpx",
    "hypercorn",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.68.0",
    "restate-sdk[serde]>=0.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
