[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with Google ADK"
requires-python = ">=3.13,<3.14"

dependencies = [
    "hypercorn",
    "google-adk>=1.18.0",
    "langfuse",
    "openinference-instrumentation-google-adk",
    "restate-sdk[serde]>=0.17.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
