[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with OpenAI Agent SDK"
requires-python = ">=3.13"

dependencies = [
    "hypercorn",
    "openai-agents==0.12.3",
    "arize-phoenix-otel",
    "openinference-instrumentation-openai-agents",
    "restate-sdk[serde]>=0.17.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
