[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with OpenAI Agent SDK"
requires-python = ">=3.12"

dependencies = [
    "restate-sdk[serde]>=0.15.0",
    "openai-agents==0.12.3",
    "langfuse",
    "openinference-instrumentation-openai-agents"
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
