[project]
name = "agents"
version = "0.1.0"
description = "Python template using Restate with OpenAI Agent SDK"
requires-python = ">=3.12"

dependencies = [
    "hypercorn",
    "openai-agents==0.12.3",
    "langfuse",
    "openinference-instrumentation-openai-agents",
    "restate-sdk>=0.17.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
