[project]
name = "patterns"
version = "0.1.0"
description = "Python DIY patterns using Restate for agents"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "hypercorn",
    "pydantic>=2.11.9",
    "langfuse",
    "litellm",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "restate-sdk",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]


[tool.uv.sources]
restate-sdk = { path = "../../../../sdk-python/dist/restate_sdk-0.17.0-cp313-cp313-macosx_11_0_arm64.whl" }